--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ overflow-checks = false     # Disable integer overflow checks.
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = { version = "4.5.18", features = ["derive"] }
+anyhow = "1.0.89"
+clap = { version = "4.5.18", features = ["derive", "cargo"] }
 tokio = { version = "1.40.0", features = ["full"] }
 
